Country Tracker (2014-02-20 shi)
==============================
Added Where's the money modules (donors, sectors, districts)
Styled tables for each module
Changed links of navigation bar to include new modules


Country Tracker (2014-02-19 shi)
==============================
Modular themeing begins (flag/country/background image)
Added example backgrounds (cc0)
Linked SAVi for individual activity links
Added navigation bar to SAVi for consistency
Added link back to modules
Added IATI footer


Country Tracker (2014-02-18 shi)
==============================
Added new landing page
Phase 1 branding for modules
Activity View is now SAVi (module)
Links to 3 country examples (BD, UG, HN)
Background image license CC0 Public Domain
Included Query examples for live testing
Added more extensive examples in dstore documentation


Switched to using the dstore cache as the main data source for the 
client side code. You can see all of these hitting the server at /q? 
followed by params that are mapped directly to sql code.


Activity View (2014-02-03 shi)
==============================
Added graphs for sectors with allocated percentages
Colour coded activity status
Added related-activity sorted by type
Added reporting-org
All links visible with hover states
Hierarchy for transactions sorting
Added commas to transaction value
Sectors default to DAC if undeclared


Activities styling js code now uses jquery.

activities.css styles raw xml data.

Switched to nodejs bake script, so we need nodejs installed to build 
the ctrack.min.js file.