@@ -3,6 +3,8 @@ Country Tracker (2014-02-20 shi)
 Added Where's the money modules (donors, sectors, districts)
 Styled tables for each module
 Changed links of navigation bar to include new modules
+Sticky footer
+Removed margin from money modules
 
 
 Country Tracker (2014-02-19 shi)
